Ziggy release 0.9.0 (2025-04-10)